# microbitv2-rs

./: .gitignore  Cargo.toml  Makefile.toml  README.md  memory.x  nrf52833_xxaa_s113.hex  private.key  rust-toolchain  s113_nrf52_7.3.0_softdevice.hex
.cargo/: config
src/: ble.rs  main.rs
